# OpenGL

./: .gitignore  CMakeLists.txt  {OpenGL}.code-workspace
headers/: Buffers.hpp  ErrorGL.hpp  Model.hpp  SDLManager.hpp  VAOs.hpp  shaders.hpp  transformations.hpp
shaders/: FragmentShader.GLSL  GeometryShader.GLSL  VertexShader.GLSL
shaders/InstancedRenderingSh/: FragmentShader.GLSL  GeometryShader.GLSL  VertexShader.GLSL
shaders/cube/: FragmentShader.GLSL  GeometryShader.GLSL  VertexShader.GLSL
shaders/framebuffersShex/: FragmentShader.GLSL  GeometryShader.GLSL  VertexShader.GLSL
shaders/textureshex/: FragmentShader.GLSL  GeometryShader.GLSL  VertexShader.GLSL
src/: Buffers.cpp  Model.cpp  SDLManager.cpp  Uniforms.cpp  VAOs.cpp  a  defaultmain.cpp  main.cpp  o  shaders.cpp  transformations.cpp
src/exercises/: FrameRenderBuffers.cpp  Textures01.cpp  Textures02.cpp  instancedRendering.cpp
src/headers/: Buffers.hpp  ErrorGL.hpp  Model.hpp  Uniforms.hpp  VAOs.hpp  shaders.hpp  transformations.hpp
textures/: TextureImg.cpp  TextureImg.h  TextureImg.hpp
